--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,7 @@
-name: 3.9 and higher branch test
+name: Run all tests
 
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
-# Run this workflow every time a new commit pushed to your repository
-
-on: push
+# Run this workflow on push and on pull_request.
+on: [push, pull_request]
 
 jobs:
   citest:
@@ -41,7 +38,7 @@ jobs:
       fail-fast: false
       matrix:
         database: ['pgsql', 'mariadb']
-        moodle-branch: ['MOODLE_38_STABLE','MOODLE_39_STABLE', 'MOODLE_310_STABLE', 'MOODLE_311_STABLE', 'master']
+        moodle-branch: ['MOODLE_38_STABLE','MOODLE_39_STABLE', 'master']
         node: ['14.15.1']
         php: ['7.2', '7.4']
 
